contrast-corrections

--- a/styles/base.css
+++ b/styles/base.css
@@ -19,23 +19,6 @@ nav a:hover {
     gap: 20px;
 }
 
-/* .info1{
-    display: flex;
-    padding: 10px;
-    margin: 10px 10px;
-    gap: 20px;
-} */
-
-/* .info1 p{
-    width: 500px;
-    margin: 8px;
-    padding: 6px;
-    font-weight: 600;
-    color: slategrey;
-    line-height: 1.6;
-    gap: 20px; */
-/* } */
-
 .card{
     border: 1px solid black;
     border-radius: 10px 10px 0px 0px;
@@ -50,13 +33,6 @@ h2{
   margin: 0;
 }
 
-h3 {
-  text-align: center;
-  padding: 8px 2px;
-  text-decoration: underline;
-  font-size: 1.25rem;
-  color: #2f4f4f; 
-}
 
 .card,
 .card2 {
@@ -65,6 +41,9 @@ h3 {
   overflow: hidden;
 }
 
+li a {
+    color: black;
+}
 
 .card2{
     font-size: 20px;
@@ -126,7 +105,7 @@ h3{
     padding: 2px;
     text-decoration: underline;
     font-size: larger;
-    color: slategray;
+    color: #000000;
 }
 
 .info1,
@@ -146,6 +125,7 @@ h1{
     padding: 10px;
 
 }
+
 main {
   max-width: 1200px;
   margin: 0 auto;
@@ -159,7 +139,7 @@ main {
     margin: 8px;
     padding: 6px;
     font-weight: 600;
-    color: slategrey;
+    color: #000000;;
     line-height: 1.6;
 }
 
@@ -189,14 +169,14 @@ figure {
 figcaption{
   margin: 8px 0 0 0;
   font-size: 18px;
-  color: #2f4f4f;
+  color: #000000;;
   text-align: center;
   font-style: italic;
 }
 
 #lastModified{
     font-size: small;
-    color: #b8d4e3;
+    color: #ffffff;
     font-weight: bold;
 }
 
